tests/baselines/reference/decoratorWithOrWithoutSemicolon.errors.txt
tests/cases/compiler/decoratorWithOrWithoutSemicolon.ts(11,17): error TS1145: Semicolon not permitted here.


==== tests/cases/compiler/decoratorWithOrWithoutSemicolon.ts (1 errors) ====
    function decorated(): Function {
        return (target: any): any => target;
    }
    
    class Member { }
    
    class Example {
        @decorated()
        public readonly member: Member;
    
        @decorated();
                    
!!! error TS1145: Semicolon not permitted here.
        public readonly memberSemicolon: Member;
    }
    